# quantself

./: .gitignore  CLAUDE.md  README.md  README_ZH.md  bundle_standalone.py  chat_server.py  eslint.config.js  health.sh  health_config.json  package-lock.json  package.json  process_data.py  share.sh
.github/workflows/: ci.yml
scripts/: com.quantself.watcher.plist  com.quantself.watcher.plist.template  health-watcher.sh
src/: App.css  App.jsx  chartTheme.js  i18n.js  index.css  print.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AchievementBadges.jsx  ActivityPanel.jsx  BaselineAlerts.jsx  CalendarHeatmap.jsx  CardiovascularPanel.jsx  ChartTooltip.jsx  ChatPanel.jsx  ComparisonView.jsx  CorrelationPanel.jsx  DateRangePicker.jsx  ECGPanel.jsx  ErrorBoundary.jsx  ExerciseRecoveryChart.jsx  GlossaryPanel.jsx  HealthScoreCard.jsx  LongevityScoreCard.jsx  ProfileSelector.jsx  RiskPanel.jsx  SettingsPanel.jsx  SleepPanel.jsx  StatCard.jsx  TrendAlerts.jsx  WeeklyReport.jsx
src/contexts/: DateRangeContext.jsx  useDateRange.js
src/utils/: dataUtils.js
tests/: test_scoring.py
