[package]
name = "quantself"
version = "1.4.0"
description = "Personal Health Dashboard"
authors = ["QuantSelf"]
edition = "2021"

[lib]
name = "quantself_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
